Resolves grid spacing issues and isolates featured links from hero component

--- a/_client/styles/base/_base-layout.scss
+++ b/_client/styles/base/_base-layout.scss
@@ -9,6 +9,9 @@
 }
 
 main {
+	align-items: center;
+	display: flex;
+	flex-flow: row-wrap;
 	min-height: 100vh;
 }
 
