--- a/_client/styles/settings/_settings-colours.scss
+++ b/_client/styles/settings/_settings-colours.scss
@@ -24,5 +24,11 @@ $s-colours: (
 	),
 	tertiary: (
 		base: #FFFFFF
+	),
+	social: (
+		base: #000000,
+		facebook: #3B5998,
+		twitter: #4099FF,
+		linkedin: #0E76A8
 	)
 );
