--- a/_client/styles/settings/_settings-typography.scss
+++ b/_client/styles/settings/_settings-typography.scss
@@ -66,7 +66,7 @@ $s-type-sizing: (
 			line-height: 1.5
 		),
 		medium: (
-			font-size: 24px,
+			font-size: 18px,
 			line-height: 1.5
 		)
 	),
